--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h3>Promotion</h3>
           <p>
             Social media can use to increase<br />
-            awarencess before an event
+            awarencess before an event hhh
           </p>
         </div>
       </div>
